--- a/style.css
+++ b/style.css
@@ -1,4 +1,20 @@
-body {background-color:tan;}
-h1{color:green;}
+body { 
+        background-color: black;
+        font-family:arial;
+        color: white;
+        text-align: center;
+     }
+h1{ color: gray;
+    font-family: verdana;
+  }
 
+.maindiv {
+    background-color: white;
+    color: black;
+    width: 300px;
+    padding: 25px;
+    border-radius: 25px;
+    text-align: center;
+}
 
+div {text-align: center};
